[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/P1.gd" type="Script" id=1]
[ext_resource path="res://Sprites_Racers/P1.png" type="Texture" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 2.0

[sub_resource type="StreamTexture" id=2]
flags = 18

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 3
params_billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = SubResource( 2 )

[sub_resource type="Animation" id=4]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="P1" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="CollisionShape"]
transform = Transform( -1, -3.55271e-15, 8.74228e-08, 3.82137e-15, 1, 8.74228e-08, -8.74228e-08, 8.74228e-08, -1, 0.25, 0, 0.3 )
material_override = SubResource( 3 )
texture = ExtResource( 2 )
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="CollisionShape/Sprite3D"]
autoplay = "R2"
playback_speed = 4.0
anims/R2 = SubResource( 4 )

[node name="KeypressTimer" type="Timer" parent="."]
wait_time = 0.02

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
[connection signal="timeout" from="KeypressTimer" to="." method="allow_keypresses_again"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
